@@ -1,4 +1,6 @@
 Collabtive 3.0
++ All external library dependencies now live in /vendor/ and are managed using composer.
++ Restructured templates. Form templates now live in the /forms/ subdirectory of the template folder.
 + Start using native HTML5 form validation instead of a JS library
 + Added blockaccordeon for the blocks in the userprofile
 + Improved the look of the file list view
@@ -10,6 +12,7 @@ Collabtive 3.0
 + Don't show mobile template in the template selector. these should not be activated directly but set by class mobileDetect()
 + Updated the database schema of new installations to use innoDB instead of myISAM storage engine. myISAM is outdated, and innoDB now the default on
   mysql.
++ Moved helper classes to replace inline styles to /theme/css/style_helpers.css
 + Most inline styles have been refactored to classes. One of the next releases will disable inline style in CSP
 + The sidebar is collapsed by default, giving more room for the main content area
   It can be expanded by clicking
